terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ingress_hostname_length/allow_max_length/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-0
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: ing-0-default-blue
spec:
  rules:
  - host: label-is-total-fiftyseven-characters-length-limit-exactly.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
